--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.18",
     "antd": "^6.1.3",
     "axios": "^1.13.2",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
+    "object-to-formdata": "^4.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.69.0",
