--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "antd": "^6.1.3",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "object-to-formdata": "^4.5.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/lodash.get": "^4.4.9",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
